<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="#cccccc"
    android:padding="10dp">
    
    <TextView
        android:id="@+id/customerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
        android:text="@string/customer" />
    
    <TextView
        android:id="@+id/salesmanView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
        android:text="@string/salesman" />
    
    <TextView
        android:id="@+id/productView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/product" />
    
    <TextView
        android:id="@+id/rateView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/rate" />
    
    <TextView
        android:id="@+id/quantityView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/qty" />
    
    <TextView
        android:id="@+id/totalView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/total" />

</LinearLayout>