<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="15dp">
    
    <Button
        android:id="@+id/customerInvoiceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_invoice" />
    
    <Button
        android:id="@+id/routeWiseSaleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/route_wise_sale" />
    
    <Button
        android:id="@+id/salesmanWiseSaleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/salesman_wise_sale" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#cccccc" />
    
    <Button
        android:id="@+id/clearDatabaseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/clear_database" />
    
    <Button
        android:id="@+id/exportDatabaseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/export_database" />

</LinearLayout>