<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listHeaderView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="#dddddd"
    android:padding="10dp">
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:textStyle="bold"
        android:text="@string/product" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/qty" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/rate" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/total" />
    
    <CheckBox 
        android:id="@+id/checkAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>