<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <Button
        android:id="@+id/salesEntryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sales_entry" />
    
    <Button
        android:id="@+id/recoveryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recovery" />
    
    <Button
        android:id="@+id/reportsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reports" />

</LinearLayout>