<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="15dp">
    
    <Button
        android:id="@+id/importDatabaseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_database" />
    
    <Button
        android:id="@+id/exportDatabaseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/export_database" />  
        
    <Button
        android:id="@+id/clearDatabaseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/clear_database" />

</LinearLayout>